--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
     <p class="bg-pink">Number 1 - I'm a class!</p>
     <div id="N2">Number 2 - I'm one ID.</div>
     <p class="bg-pink f-24px">Number 3 - I'm a class, but cooler!</p>
-    <div id="N4">Number 4 - I'm another ID.</div>
+    <div id="N4" class="f-24px">Number 4 - I'm another ID.</div>
     <p class="bg-pink">Number 5 - I'm a class!</p>
   </body>
 </html>
